fix #512 add CSS overflow property to tutorial content

--- a/OpenRobertaServer/staticResources/css/roberta.css
+++ b/OpenRobertaServer/staticResources/css/roberta.css
@@ -2011,6 +2011,7 @@ ul#tutorial-close {
 	margin: 10px;
 	padding: 16px;
 	font-size: 18px;
+	overflow-y: auto;
 }
 div#helpDiv {
     margin-top: 24px;
